alignment fix for legend in full width column

--- a/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
+++ b/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
@@ -1814,4 +1814,5 @@ div.tab button:first-child {
 
 .full-widget-legend {
   bottom: 75px;
+  left: 12px;
 }
